# msgspec-schema-sync

./: .pre-commit-config.yaml  pyproject.toml
